[gd_scene load_steps=13 format=3 uid="uid://egj441urml38"]

[ext_resource type="Script" path="res://globals/Scenes/Game_Over_Behavior.gd" id="1_g4l0y"]
[ext_resource type="Texture2D" uid="uid://j20q72mxg6w5" path="res://assets/ui/ALL_HUD/10.png" id="1_mviwp"]
[ext_resource type="FontFile" uid="uid://dr7g5bnuqelmi" path="res://assets/fonts/monogram.ttf" id="2_34gcq"]
[ext_resource type="Texture2D" uid="uid://8pi2kf1xf564" path="res://assets/ui/ALL_HUD/8.png" id="3_bfe0g"]
[ext_resource type="Texture2D" uid="uid://cmr67lnr3t2jn" path="res://assets/ui/ALL_HUD/9.png" id="3_gg4kf"]
[ext_resource type="Texture2D" uid="uid://dblevra23wb7f" path="res://assets/ui/ALL_HUD/7.png" id="4_kwb8j"]
[ext_resource type="Texture2D" uid="uid://decqnjuvaab1u" path="res://assets/ui/ALL_HUD/3.png" id="5_cqxak"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_67q3d"]
bg_color = Color(0.933333, 0.254902, 0.270588, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing = false

[sub_resource type="AtlasTexture" id="AtlasTexture_ssw3n"]
atlas = ExtResource("4_kwb8j")
region = Rect2(256, 344, 608, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_xltnc"]
atlas = ExtResource("4_kwb8j")
region = Rect2(928, 336, 616, 608)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffj2q"]
atlas = ExtResource("5_cqxak")
region = Rect2(280, 296, 608, 616)

[sub_resource type="AtlasTexture" id="AtlasTexture_68dku"]
atlas = ExtResource("5_cqxak")
region = Rect2(968, 296, 608, 616)

[node name="Game_Over_Autoload" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g4l0y")

[node name="Root" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.682353)

[node name="Base" type="Panel" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -53.0
offset_right = 102.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_67q3d")

[node name="ScoreSprite" type="Sprite2D" parent="Root/Base"]
position = Vector2(37, 15)
scale = Vector2(0.0384, 0.0384)
texture = ExtResource("1_mviwp")

[node name="ScoreLabel" type="Label" parent="Root/Base"]
layout_mode = 0
offset_left = 70.0
offset_top = 2.0
offset_right = 82.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 0.972549, 0.776471, 1)
theme_override_fonts/font = ExtResource("2_34gcq")
theme_override_font_sizes/font_size = 32
text = "7"

[node name="Ticketsbase" type="Panel" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -11.0
offset_right = 102.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_67q3d")

[node name="TicketSprie" type="Sprite2D" parent="Root/Ticketsbase"]
position = Vector2(37, 18)
scale = Vector2(0.0384, 0.0384)
texture = ExtResource("3_gg4kf")

[node name="TicketLabel" type="Label" parent="Root/Ticketsbase"]
layout_mode = 0
offset_left = 73.0
offset_top = 2.0
offset_right = 85.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 0.972549, 0.776471, 1)
theme_override_fonts/font = ExtResource("2_34gcq")
theme_override_font_sizes/font_size = 32
text = "7"

[node name="GameOverSprite" type="Sprite2D" parent="Root"]
position = Vector2(80, 73)
scale = Vector2(0.0592001, 0.0592001)
texture = ExtResource("3_bfe0g")

[node name="RestartBtn" type="TouchScreenButton" parent="Root"]
position = Vector2(32, 110)
scale = Vector2(0.0566667, 0.0566667)
texture_normal = SubResource("AtlasTexture_ssw3n")
texture_pressed = SubResource("AtlasTexture_xltnc")

[node name="CloseBtn" type="TouchScreenButton" parent="Root"]
position = Vector2(32, 148)
scale = Vector2(0.0566667, 0.0566667)
texture_normal = SubResource("AtlasTexture_ffj2q")
texture_pressed = SubResource("AtlasTexture_68dku")
